<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>btms</artifactId>
    <version>1.5.0</version>
    <packaging>jar</packaging>
    <name>BTMS - Badminton Tournament Management System</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
        <relativePath />
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <app.name>Badminton Tournament Management System (BTMS)</app.name>
        <maven.compiler.release>21</maven.compiler.release>
        <main.class>com.example.btms.BadmintonTournamentManagementSystemApplication</main.class>

        <!-- Mặc định (sẽ bị profiles override tùy theo có ổ D hay không) -->
        <install.dir>C:\BTMS</install.dir>
        <dist.dir>${project.build.directory}/dist</dist.dir>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>

        <!-- Thymeleaf Layout Dialect for layout:decorate support -->
        <dependency>
            <groupId>nz.net.ultraq.thymeleaf</groupId>
            <artifactId>thymeleaf-layout-dialect</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.4</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>3.4</version>
        </dependency>

        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.5.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>javase</artifactId>
            <version>3.5.2</version>
        </dependency>

        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.12.0</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp-sse</artifactId>
            <version>4.12.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.toedter</groupId>
            <artifactId>jcalendar</artifactId>
            <version>1.4</version>
        </dependency>

        <dependency>
            <groupId>com.github.librepdf</groupId>
            <artifactId>openpdf</artifactId>
            <version>1.3.39</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>

            <!-- Repackage Spring Boot fat-jar -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- jpackage tạo MSI -->
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.6</version>
                <executions>
                    <execution>
                        <id>windows-msi</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                        <configuration>
                            <destination>${dist.dir}</destination>
                            <input>${project.build.directory}</input>

                            <name>${app.name}</name>
                            <appVersion>${project.version}</appVersion>
                            <vendor>BTMS</vendor>
                            <description>BTMS - Badminton Tournament Management System.</description>

                            <type>MSI</type>
                            <mainJar>${project.build.finalName}.jar</mainJar>

                            <icon>src/main/resources/icons/app.ico</icon>
                            <winMenu>true</winMenu>
                            <winMenuGroup>${app.name}</winMenuGroup>
                            <winShortcut>true</winShortcut>
                            <winDirChooser>true</winDirChooser>

                            <installDir>${install.dir}</installDir>
                            <winUpgradeUuid>6b1d7f39-9c8a-4a11-9c36-6e0be3e2c2a1</winUpgradeUuid>
                            <licenseFile>src/main/resources/license.txt</licenseFile>
                            <javaOptions>
                                <option>-Xmx1024m</option>
                            </javaOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Profiles auto-chọn installDir theo sự tồn tại của ổ D -->
    <profiles>
        <!-- Nếu CÓ ổ D: cài mặc định D:\BTMS -->
        <profile>
            <id>default-d</id>
            <activation>
                <file>
                    <exists>D:/</exists>
                </file>
            </activation>
            <properties>
                <install.dir>D:\BTMS</install.dir>
            </properties>
        </profile>

        <!-- Nếu KHÔNG có ổ D: fallback C:\BTMS -->
        <profile>
            <id>fallback-c</id>
            <activation>
                <file>
                    <missing>D:/</missing>
                </file>
            </activation>
            <properties>
                <install.dir>C:\BTMS</install.dir>
            </properties>
        </profile>
    </profiles>

    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
    </pluginRepositories>
</project>